[oracle-cloud] Update common files for branch master (#481)
Co-authored-by: Cedric Champeau <cedric.champeau@gmail.com>
Co-authored-by: Álvaro Sánchez-Mariscal <alvaro.sanchez-mariscal@oracle.com>